	* cachesystem.c: the structure and functions tracking pending cache
		accesses have been redesigned. The most important change is that
		load accesses are not repeated when a load to the same address
		is in-flight. Instead, the new aliasing loads wait to the pending one
		to be completed, and the cache access completion triggers the
		insertion into the corresponding eventq of all uops awaiting
		for the load.
	* tcache.c: statistics dumped into pipeline report file.
	* processor.c: some more global stats.

2010-05-02
	Version 2.3.1 Released

2010-05-02
	* phregs.c: phregs_can_rename: avoid loop to count busy registers.
	* processor.c: detailed report with occupancy stats using -report:pipeline.

2010-05-03
	* cachesystem.c: bug fixed - two new checks for wrong format in cache config files.
		They caused 'asserts' to fail. Now they produce 'fatals'.
	* moesi.c, mmu.c: code fixed to allow for a system with no caches using only
		main memory and no interconnect.

2010-05-04
	* syscall.c: system call 'futex': support for cmd = FUTEX_WAKE_BITSET and
		FUTEX_WAIT_BITSET.

2010-05-05
	* elf.c: error messages updated to be more explicit. The error message obtained
		when trying to execute 64-bit binaries is specific.

2010-06-15
	* processor.c: bug fixed - stats Commit.squashed were showing the same
		results as Commit.mispred.
	* m2s.h: '-phregs_size' and '-phregs_kind' options and variables changed to
		'-rf_size' and 'rf_kind'.
	* processor.c: pipeline statistics for McPAT.
	* cachesystem.c: statistics for McPAT.

2010-06-16
	* phregs.c: function 'phregs_can_rename' substituted by 'phregs_count_deps'.
		This function is called when the uop is created, and stores the
		number of required logical/physical ideps/odeps.
	* cachesystem.c: TLB split into Data-TLB and Inst-TLB for compatibility with
		McPAT.
	* processor.c: call to 'uopq_reg_options()' was missing.

2010-06-16
	Version 2.3.2 Released

2010-06-18
	* elf.c: warnings produced by 'sizeof' removed.
